# SnapRHI

./: .clang-format  .editorconfig  .fossa.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  build.sh  fossa-deps.yml
examples/triangle-demo-app/: CMakeLists.txt  README.md
examples/triangle-demo-app/assets/: draw_color.frontend.glsl  draw_color.glsl  draw_color.msl  draw_color.spv  draw_color_fs.spv  draw_color_vs.spv
examples/triangle-demo-app/src/: Assets.cpp  Assets.h  FrameGuard.h  TriangleRenderer.cpp  TriangleRenderer.h  Window.cpp  Window.h  main.cpp
examples/triangle-demo-app/src/Metal/: MtlWindow.h  MtlWindow.mm
examples/triangle-demo-app/src/OpenGL/: GLWindow.cpp  GLWindow.h
examples/triangle-demo-app/src/Vulkan/: VkWindow.cpp  VkWindow.h
src/backend/common/: CMakeLists.txt
src/backend/common/include/snap/rhi/backend/common/: CommandBuffer.h  CommandEncoder.h  DescriptorSet.h  Device.hpp  DeviceContextless.h  FencePool.h  (+14 more)
src/backend/common/src/: Device.cpp  DeviceResourceRegistry.cpp  FencePool.cpp  Logging.cpp  Math.cpp  PipelineLayout.cpp  PlatformSyncHandle.cpp  ProfilingScope.cpp  ResourceResidencySet.cpp  SubmissionTracker.cpp  TextureInterop.cpp  Utils.cpp  ValidationLayer.cpp
src/backend/metal/: CMakeLists.txt
src/backend/metal/src/: BlitCommandEncoder.mm  Buffer.mm  CommandBuffer.mm  CommandEncoder.mm  CommandQueue.mm  ComputeCommandEncoder.mm  ComputePipeline.mm  Context.mm  DescriptorPool.mm  DescriptorSet.mm  Device.mm  DeviceFactory.mm  Fence.mm  Framebuffer.mm  PipelineCache.mm  PipelineResourceState.mm  QueryPool.mm  RenderCommandEncoder.mm  RenderPipeline.mm  RenderPipelineResourceState.mm  Sampler.mm  Semaphore.mm  ShaderLibrary.mm  ShaderModule.mm  Texture.mm  TextureViewCache.mm  Utils.mm
src/backend/noop/: CMakeLists.txt
src/backend/noop/src/: BlitCommandEncoder.cpp  Buffer.cpp  CommandBuffer.cpp  CommandQueue.cpp  ComputeCommandEncoder.cpp  ComputePipeline.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Device.cpp  DeviceFactory.cpp  Fence.cpp  Framebuffer.cpp  PipelineCache.cpp  RenderCommandEncoder.cpp  RenderPipeline.cpp  Sampler.cpp  Semaphore.cpp  ShaderLibrary.cpp  ShaderModule.cpp  Texture.cpp
src/backend/opengl/: CMakeLists.txt
src/backend/opengl/src/: AttribsUtils.cpp  BlitCmdPerformer.cpp  BlitCommandEncoder.cpp  Buffer.cpp  CmdPerformer.cpp  CommandAllocator.cpp  CommandBuffer.cpp  CommandBufferPool.cpp  CommandEncoder.cpp  CommandIterator.cpp  CommandQueue.cpp  CommandRecorderUtils.cpp  ComputeCmdPerformer.cpp  ComputeCommandEncoder.cpp  ComputePipeline.cpp  Context.cpp  DebugMessageHandler.cpp  DebugMessenger.cpp  DescriptorSet.cpp  Device.cpp  DeviceContext.cpp  DeviceFactory.cpp  ErrorCheckGuard.cpp  Exception.cpp  FBO.cpp  Fence.cpp  Format.cpp  Framebuffer.cpp  FramebufferPool.cpp  GLObject.cpp  GLStateCache.cpp  GPUInfo.cpp  HashUtils.cpp  Instance.cpp  LogicalBuffer.cpp  NativeBuffer.cpp  OpenGL.cpp  Pipeline.cpp  PipelineCache.cpp  PipelineCacheUtils.cpp  (+22 more)
src/backend/opengl/src/GL21/: Instance.cpp  Instance.hpp
src/backend/opengl/src/GL41/: Instance.cpp  Instance.hpp
src/backend/opengl/src/GL45/: Instance.cpp  Instance.hpp
src/backend/opengl/src/GLES20/: Instance.cpp  Instance.hpp
src/backend/opengl/src/GLES20/PlatformSpecific/Android/: Instance.cpp
src/backend/opengl/src/GLES20/PlatformSpecific/LinuxGLES/: Instance.cpp
src/backend/opengl/src/GLES20/PlatformSpecific/WebAssembly/: Instance.cpp
src/backend/opengl/src/GLES20/PlatformSpecific/iOS/: Instance.cpp
src/backend/opengl/src/GLES30/: Instance.cpp  Instance.hpp
src/backend/opengl/src/GLES31/: Instance.cpp  Instance.hpp
src/backend/opengl/src/GLES32/: Instance.cpp  Instance.hpp
src/backend/opengl/src/PlatformSpecific/WebAssembly/: ValBuffer.cpp  ValBuffer.hpp
src/backend/opengl/src/platform/android/: Semaphore.cpp
src/backend/vulkan/: CMakeLists.txt
src/backend/vulkan/src/: BlitCommandEncoder.cpp  Buffer.cpp  CommandBuffer.cpp  CommandEncoder.cpp  CommandPool.cpp  CommandQueue.cpp  ComputeCommandEncoder.cpp  ComputePipeline.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetEncoder.cpp  DescriptorSetLayout.cpp  Device.cpp  DeviceFactory.cpp  Fence.cpp  Framebuffer.cpp  ImageLayoutManager.cpp  ImageViewCache.cpp  ImageWithMemory.cpp  Instance.cpp  PipelineCache.cpp  PipelineLayout.cpp  QueryPool.cpp  RenderCommandEncoder.cpp  RenderPass.cpp  RenderPipeline.cpp  Sampler.cpp  Semaphore.cpp  ShaderLibrary.cpp  ShaderModule.cpp  Texture.cpp  Utils.cpp  vulkan.cpp
src/backend/vulkan/src/platform/android/: Semaphore.cpp
src/interop/: CMakeLists.txt
src/interop/include/snap/rhi/interop/: TextureInteropFactory.h
src/interop/src/Android/: TextureInterop.cpp  TextureInterop.h  TextureInteropFactory.cpp
src/interop/src/Apple/: TextureInterop.h  TextureInterop.mm  TextureInteropFactory.mm
src/interop/src/Linux/: TextureInterop.cpp  TextureInterop.h  TextureInteropFactory.cpp
src/interop/src/Other/: TextureInterop.cpp  TextureInterop.h  TextureInteropFactory.cpp
src/interop/src/Windows/: TextureInterop.cpp  TextureInterop.h  TextureInteropFactory.cpp
tests/: CMakeLists.txt  README.md
tests/cmake/: CompileVulkanShaders.cmake
tests/scripts/: compile_vulkan_shaders.sh
tests/shaders/metal/: compute_fill.metal  fill.metal  passthrough.metal
tests/shaders/opengl/: compute_fill.glsl  fill.glsl  passthrough.glsl
tests/shaders/vulkan/: compute_fill.comp  fill.frag  fill.vert  passthrough.vert
tests/src/: main.cpp  main_apple.mm
tests/src/API/: BufferTest.cpp  CommandBufferTest.cpp  DescriptorSetTest.cpp  DeviceTest.cpp  PipelineCacheTest.cpp  QueryPoolTest.cpp  SamplerTest.cpp  SynchronizationTest.cpp  TextureTest.cpp
tests/src/Blit/: BlitCommandEncoderTest.cpp
tests/src/Compute/: ComputeCommandEncoderTest.cpp
tests/src/Rendering/: RenderCommandEncoderTest.cpp  RenderPipelineTest.cpp
tests/src/TestHarness/: DeviceTestFixture.h  ReadbackHelper.h  ShaderHelper.h  ShaderSources.h
(+329 files in other folders)
